# DockGuard

./: .coverage  .dockerignore  .gitignore  .grype.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  FRONTENDPLAN.md  LICENSE.md  README.md  VULNERABILITY_REPORT.md  api.py  database.py  dev.sh  docker-compose.yml  docker_watcher.py  grype_scanner.py  models.py  pyproject.toml  requirements.txt  scheduler.py  test_coro.py  test_coro2.py  test_coro3.py  trufflehog-scan-results.md
.agents/workflows/: release.md
.claude/: launch.json  settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  update-grype.yml  update-node.yml  update-python.yml
alembic/: env.py
backend/: alembic.ini  api.py  api_helpers.py  config.py  database.py  docker_watcher.py  grype_scanner.py  main.py  models.py  reference_titles.py  registry_checker.py  scheduler.py  vex_discovery.py
backend/alembic/: env.py
backend/jobs/: containers.py  grype_db.py  maintenance.py  notifications.py  registry_updates.py
backend/routers/: __init__.py  containers.py  (+6 more)
docker/: Dockerfile  docker-compose.yml  supervisord.conf
frontend/: .prettierrc  Dockerfile  eslint.config.js  log-timestamps.cjs  package-lock.json  package.json  vite.config.js  vite.config.ts  vitest-setup.ts
plans/: 2026-02-26-grype-db-rescan-design.md  dashboard-performance-fix.md  fix-dashboard-n+1-queries-and-missing-indexes-results.md  frontend_extraction_plan.md  frontend_extraction_walkthrough.md  frontend_testing_plan.md  frontend_testing_task.md  frontend_testing_walkthrough.md  grype_eol_warnings_plan.md  grype_eol_warnings_walkthrough.md  implementation_plan.md  pagination_implementation_plan.md  pagination_walkthrough.md  rename_to_dockguard_plan.md  rename_to_dockguard_walkthrough.md  router_split_plan.md  router_split_task.md  scheduler_refactor_plan.md  scheduler_refactor_task.md  scheduler_refactor_walkthrough.md  settings_implementation_plan.md  settings_implementation_walkthrough.md  tasks_view_walkthrough.md  testing_task_checklist.md  ui_polish_plan.md  ui_polish_summary.md  vex-integration-plan.md  vex-integration-results.md  vex-publishing-plan.md  vex-publishing-walkthrough.md  vuln_grouping_by_cve_plan.md  vuln_grouping_by_cve_walkthrough.md  walkthrough.md
scripts/: bump_version.py  check_ratelimit_headers.py  release.sh
server/: api.py  database.py  scheduler.py
tests/: conftest.py  fixtures.py  test_api.py  test_docker_watcher.py  test_grype_scanner.py  test_integration.py  test_scheduler.py
vex/: README.md  dockguard.vex.json
(+341 files in other folders)
