[project]
name = "dockguard"
version = "0.0.0"
requires-python = ">=3.14.3"
dependencies = [
    "fastapi",
    "apscheduler",
    "uvicorn",
    "docker",
    "sqlmodel",
    "alembic",
    "colorlog>=6.10.1",
    "httpx",
]

[dependency-groups]
dev = ["pytest", "httpx", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests requiring a live Docker daemon and grype on PATH",
]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/migrations/*"]

[tool.coverage.report]
show_missing = true
