[project]
name = "dockguard"
version = "0.2.12"
requires-python = ">=3.14.3"
dependencies = [
    "fastapi",
    "apscheduler",
    "uvicorn",
    "docker",
    "sqlmodel",
    "alembic",
    "colorlog>=6.10.1",
    "httpx",
]

[dependency-groups]
dev = ["pytest", "httpx", "pytest-cov", "ruff>=0.9"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests requiring a live Docker daemon and grype on PATH",
]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/migrations/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/conftest.py" = ["E402"]
